[update]meta info

--- a/index.html
+++ b/index.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="format-detection" content="telephone=no" />
+  <!-- meta tags -->
   <title>トップページのタイトル</title>
-  <meta name="description" content="トップページのディスクリプション">
-  <link rel="stylesheet" href="./dist/css/style.css">
-</head>
+  <meta name="description" content="data description" />
+  <meta name="keywords" content="data keyword" />
+  <!-- ogp -->
+  <meta property="og:title" content="data og:title" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="data og:url" />
+  <meta property="og:image" content="data og:img" />
+  <meta property="og:site_name" content="data og:sitename" />
+  <meta property="og:description" content="data og:description" />
+  <!-- twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@twitter-id" />
+  <meta name="twitter:domain" content="twitter.com/NAME" />
+  <meta name="twitter:title" content="data og:title" />
+  <meta name="twitter:description" content="data og:description" />
+  <!-- facebook -->
+  <meta property="fb:admins" content="888888888888888" />
+  <meta property="fb:app_id" content="888888888888888">
+  <meta name="twitter:image" content="tw_imageUrl" />
+  <meta name="twitter:creator" content="creator name" />
+  <!-- favicon -->
+  <link rel="”icon”" href="favicon url" />
+  <link rel="apple-touch-icon" sizes="48x48" href="apple_touch_icon url">
+  <!-- css -->
+  <link rel="stylesheet" href="./dist/style.css">
+</head> 
 <body>
-
 <main>
   <h1>Hello ejs</h1>
   <p>トップページのテキスト</p>
 </main>
-
 <script src="./dist/js/bundle.js"></script>
 </body>
 </html>
