--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./dist/css/app.css">
 </head>
 <body>
-  <div class="contents">
+  <div class="contents" style="overflow: hidden;">
 
     <!-- loading画面 -->
     <div id="js-loader" class="loader"></div>
