--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    <!-- jQuery -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <!-- css -->
-  <link rel="stylesheet" href="./dist/css/app.css?rev">
+  <link rel="stylesheet" href="./dist/css/app.css?ver=c882a630d64afda5">
 </head> 
 <body>
   <!-- loading画面 -->
@@ -172,6 +172,6 @@
     </section><!-- /.gallery -->
   </main>
   <div id="js-scroll-top" class="c-scroll-top c-scroll-top--animation">TOP</div>
-<script src="./dist/js/bundle.js"></script>
+<script src="./dist/js/bundle.js?ver=c882a630d64afda5"></script>
 </body>
 </html>
